Break long words (e.g. URLs) in chat view to prevent overflows
This prevents a horizontal scroll bar as long as there is
space for the message block. If it is resized to a size that
only allows horizontal space for the dark side block, then
there will still be a horizontal scroll bar.

Test-Information:

Tested in various chat rooms by resizing the splitter between
chat view and occupant list.

--- a/Swift/resources/themes/Default/main.css
+++ b/Swift/resources/themes/Default/main.css
@@ -38,6 +38,7 @@ body {
     top: 0;
     left: 0;
     margin-bottom: 10px;
+    overflow-wrap: break-word; /* Allow breaking of long words (e.g. URLs) to prevent overflow. */
     /*margin-top: -2px; /* REMOVE THIS LINE. FOR DISPLAY PURPOSE ONLY. */
 }
 
